After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 620148 - [videomixer] Doesn't negotiate format with downstream
[videomixer] Doesn't negotiate format with downstream
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.10.24
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-05-31 11:21 UTC by Edward Hervey
Modified: 2010-06-01 11:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videomixer: Implement sinkpad GetCapsFunction. (2.66 KB, patch)
2010-05-31 11:31 UTC, Edward Hervey
none Details | Review
videomixer: Implement sinkpad GetCapsFunction. (3.06 KB, patch)
2010-06-01 10:42 UTC, Edward Hervey
committed Details | Review

Description Edward Hervey 2010-05-31 11:21:12 UTC
Right now the videomixer sink pads return the pad template on get_caps(), which is problematic when downstream is restricting either:
* The format (RGB? YUV? variant?)
* The width/height

Currently, upstream elements therefore assume it can output any of the sink pad template formats... which later results in failure when streaming.
Comment 1 Edward Hervey 2010-05-31 11:24:46 UTC
A small way to demonstrate how stupid it's acting :)

gst-launch-0.10 videotestsrc ! videomixer ! video/x-raw-rgb ! fakesink
Comment 2 Edward Hervey 2010-05-31 11:31:11 UTC
Created attachment 162371 [details] [review]
videomixer: Implement sinkpad GetCapsFunction.

This allows returning only the formats that downstream can support.
Comment 3 Sebastian Dröge (slomo) 2010-05-31 14:00:23 UTC
Could you base your patch on the one in bug #618530? I think the only change that's necessary is, to set the PAR additional to the width/height/fps.
Comment 4 Edward Hervey 2010-06-01 10:42:48 UTC
Created attachment 162448 [details] [review]
videomixer: Implement sinkpad GetCapsFunction.

This allows returning only the formats, width, height, framerate
and pixel-aspect-ratio that downstream can support.
Comment 5 Sebastian Dröge (slomo) 2010-06-01 11:03:21 UTC
Looks good, please commit :)
Comment 6 Edward Hervey 2010-06-01 11:16:15 UTC
commit 01abf5b94e72ed63f67f11d2c44b1a843756f6d4
Author: Edward Hervey <bilboed@bilboed.com>
Date:   Mon May 31 13:30:05 2010 +0200

    videomixer: Implement sinkpad GetCapsFunction.
    
    This allows returning only the formats, width, height, framerate
    and pixel-aspect-ratio that downstream can support.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=620148